FIX attempt for jarring scrolling effect on mobile 16

--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -16,7 +16,7 @@ main {
 }
 main div {
   height: 100vh;
-  max-height: 100svh;
+  max-height: 600px;
   padding: 0 1vw;
   width: 100%;
 }
